refactor: 코드 통합 작업 및 오류 수정 1차 - JWT 처리 정리 - AuthController 리팩토링 - UserLibraryService 구조 개선 - AnswerOption 엔티티 및 DDL 반영 - build.gradle 중복 제거 및 테스트 의존성 추가